build/log/idf_py_stdout_output_38288
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D G:\idfzk\build\bootloader\esp-idf\esptool_py && F:\esp-idfl\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe F:/Espressif/frameworks/esp-idf-v5.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 G:/idfzk/build/bootloader/bootloader.bin"
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/8] cmd.exe /C "cd /D G:\idfzk\build\esp-idf\main && F:\esp-idfl\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe F:/Espressif/frameworks/esp-idf-v5.3/components/spiffs/spiffsgen.py 0x7e0000 G:/idfzk/assets G:/idfzk/build/assets.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len"
[3/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj 
ccache F:\esp-idfl\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IG:/idfzk/build/config -IG:/idfzk/main -IF:/Espressif/frameworks/esp-idf-v5.3/components/newlib/platform_include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/include/freertos -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/config/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IF:/Espressif/frameworks/esp-idf-v5.3/components/freertos/esp_additions/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/include/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/dma/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/ldo/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32s3/. -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_hw_support/port/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/heap/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/log/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/soc/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/platform_port/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/hal/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/include/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_rom/esp32s3 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_common/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/soc -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_system/port/include/private -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/xtensa/deprecated_include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/include/apps/sntp -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/lwip/src/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/freertos/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/arch -IF:/Espressif/frameworks/esp-idf-v5.3/components/lwip/port/esp32xx/include/sys -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/wifi_apps/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/wifi_apps/nan_app/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_wifi/include/local -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_event/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_phy/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_phy/esp32s3/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_netif/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/nvs_flash/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/spi_flash/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_partition/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/json/cJSON -IF:/Espressif/frameworks/esp-idf-v5.3/components/spiffs/include -IG:/idfzk/components/ssd1306 -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_spi/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_pm/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_driver_i2c/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/mqtt/esp-mqtt/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/tcp_transport/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp-tls -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp-tls/esp-tls-crypto -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/port/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/mbedtls/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/mbedtls/library -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/esp_crt_bundle/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/mbedtls/3rdparty/everest/include -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/mbedtls/3rdparty/p256-m -IF:/Espressif/frameworks/esp-idf-v5.3/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IF:/Espressif/frameworks/esp-idf-v5.3/components/esp_timer/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=G:/idfzk=. -fmacro-prefix-map=F:/Espressif/frameworks/esp-idf-v5.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\idfzk.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/idfzk.c.obj -c G:/idfzk/main/idfzk.c
G:/idfzk/main/idfzk.c: In function 'display_chinese_string':
G:/idfzk/main/idfzk.c:821:13: error: implicit declaration of function 'ssd1306_display_char'; did you mean 'ssd1306_display_text'? [-Werror=implicit-function-declaration]
  821 |             ssd1306_display_char(&dev, page, current_x, *p, false);
      |             ^~~~~~~~~~~~~~~~~~~~
      |             ssd1306_display_text
G:/idfzk/main/idfzk.c: In function 'mqtt_event_handler':
G:/idfzk/main/idfzk.c:1258:30: warning: unused variable 'client' [-Wunused-variable]
 1258 |     esp_mqtt_client_handle_t client = event->client;
      |                              ^~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
